--- a/frontend/login.html
+++ b/frontend/login.html
@@ -54,9 +54,7 @@ document.getElementById('btn-login').onclick = function(e) {
             loginMsg.style.color = '#28a745';
             loginMsg.innerText = 'Login berhasil!';
             setTimeout(() => {
-                loginForm.style.display = 'none';
-                // TODO: tampilkan fitur sesuai role (bisa reload atau manipulasi DOM)
-                window.location.reload();
+                window.location.href = 'index.html';
             }, 800);
         } else {
             loginMsg.style.color = '#d9534f';
