--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,5 +1,10 @@
+<!-- Logo SMAN 1 Kecamatan Guguak -->
+<div style="text-align:center;margin-top:40px;">
+    <img src="logo_sman1.png" alt="Logo SMAN 1 Kecamatan Guguak" style="width:90px;height:90px;object-fit:contain;margin-bottom:10px;">
+    <div style="font-weight:bold;font-size:1.1em;margin-bottom:8px;letter-spacing:0.5px;color:#007bff;">SMAN 1 KECAMATAN GUGUAK</div>
+</div>
 <!-- Form Login Multi-Role -->
-<div id="login-form" style="max-width:340px;margin:40px auto;padding:24px;border:1px solid #ccc;border-radius:8px;box-shadow:0 2px 8px #0001;background:#fff;">
+<div id="login-form" style="max-width:340px;margin:24px auto 40px auto;padding:24px;border:1px solid #ccc;border-radius:8px;box-shadow:0 2px 8px #0001;background:#fff;">
     <h2 style="text-align:center;">Login</h2>
     <label for="login-role">Login sebagai:</label>
     <select id="login-role" style="width:100%;margin-bottom:10px;">
